# Running-LLMs-on-Mobile-Phones

./: .gitignore  README.md
Finetuned-inference-for-android/: README.md
Finetuned-inference-for-android/app/: build.gradle.kts
Finetuned-inference-for-android/app/src/main/python/: test.py
flutter_application_1/: README.md
flutter_application_1/android/: build.gradle.kts  settings.gradle.kts
flutter_application_1/android/app/: build.gradle.kts
flutter_application_1/android/app/src/main/python/: chaquopy_runner.py
flutter_application_1/lib/: main.dart
flutter_application_1/test/: widget_test.dart
new_gguf_llm_app/: README.md  pubspec.yaml
new_gguf_llm_app/android/app/: build.gradle.kts
new_gguf_llm_app/android/app/src/main/: AndroidManifest.xml
new_gguf_llm_app/android/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
new_gguf_llm_app/android/app/src/main/python/: chaquopy_runner.py
new_gguf_llm_app/ios/Runner/: Info.plist
new_gguf_llm_app/ios/Runner.xcodeproj/: project.pbxproj
new_gguf_llm_app/lib/: main.dart
new_gguf_llm_app/linux/: CMakeLists.txt
new_gguf_llm_app/linux/runner/: my_application.cc
new_gguf_llm_app/macos/Runner.xcodeproj/: project.pbxproj
new_gguf_llm_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
new_gguf_llm_app/macos/Runner/Configs/: AppInfo.xcconfig
new_gguf_llm_app/test/: widget_test.dart
new_gguf_llm_app/web/: index.html  manifest.json
new_gguf_llm_app/windows/: CMakeLists.txt
new_gguf_llm_app/windows/runner/: Runner.rc  main.cpp
(+8 files in other folders)
